--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "teste-g-solutions": {
+    "g-solutions": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/teste-g-solutions",
+            "outputPath": "dist/g-solutions",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,9 +28,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -66,18 +73,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "teste-g-solutions:build"
+            "browserTarget": "g-solutions:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "teste-g-solutions:build:production"
+              "browserTarget": "g-solutions:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "teste-g-solutions:build"
+            "browserTarget": "g-solutions:build"
           }
         },
         "test": {
@@ -114,15 +121,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "teste-g-solutions:serve"
+            "devServerTarget": "g-solutions:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "teste-g-solutions:serve:production"
+              "devServerTarget": "g-solutions:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "teste-g-solutions"
+    }
+  },
+  "defaultProject": "g-solutions",
+  "cli": {
+    "analytics": "5b819995-fc63-4a7e-ab05-6427ff7e0ee6"
+  }
 }
