--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teste-g-solutions",
+  "name": "g-solutions",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
