--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "g-solutions:build"
+            "browserTarget": "g-solutions:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
